--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -19,5 +19,7 @@
         {% else %}
             The specified category {{ category_name }} does not exist!
         {% endif %}
+        <p></p>
+        <a href="/rango/category/{{ category.slug }}/add_page/">Add a New Page</a><br />
     </body>
 </html>
