--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -22,5 +22,6 @@
         {% endif %}
 
         <a href="/rango/about/">About</a>
+        <a href="/rango/add_category/">Add a New Category</a><br />
     </body>
 </html>
