--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -20,6 +20,8 @@
             The specified category {{ category_name }} does not exist!
         {% endif %}
         <p></p>
-        <a href="/rango/category/{{ category.slug }}/add_page/">Add a New Page</a><br />
+        {% if user.is_authenticated %}
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add a New Page</a><br />
+        {% endif %}
     </body>
 </html>
