--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -5,7 +5,11 @@
     </head>
 
     <body>
-        <h1>Rango says...hello world!</h1>
+        {% if user.is_authenticated %}
+            <h1>Rango says... hello {{ user.username }}!</h1>
+        {% else %}
+            <h1>Rango says... hello world!</h1>
+        {% endif %}
 
         {% if categories %}
             <ul>
@@ -21,7 +25,18 @@
             <strong>There are no categories present.</strong>
         {% endif %}
 
-        <a href="/rango/about/">About</a>
-        <a href="/rango/add_category/">Add a New Category</a><br />
+        {% if user.is_authenticated %}
+            <a href="/rango/restricted/">Restricted Page</a>
+            <p></p>
+            <a href="/rango/logout/">Logout</a><br />
+            <p></p>
+             <a href="/rango/add_category/">Add a New Category</a>
+        {% else %}
+            <a href="/rango/register/">Register Here</a>
+            <p></p>
+            <a href="/rango/login/">Login</a>
+        {% endif %}
+    <p></p>
+    <a href="/rango/about/">About</a><br/>
     </body>
 </html>
