--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
 
-    <body>
+{% load staticfiles %}
+
+{% block title %}Rango{% endblock %}
+
+    {% block body_block %}
         {% if user.is_authenticated %}
             <h1>Rango says... hello {{ user.username }}!</h1>
         {% else %}
@@ -14,7 +14,7 @@
         {% if categories %}
             <ul>
                 {% for category in categories %}
-                <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+                <li><a href="{% url 'category'  category.slug %}">{{ category.name }}</a></li>
                 {% endfor %}
                 <p></p>
                 {% for page in pages %}
@@ -25,18 +25,4 @@
             <strong>There are no categories present.</strong>
         {% endif %}
 
-        {% if user.is_authenticated %}
-            <a href="/rango/restricted/">Restricted Page</a>
-            <p></p>
-            <a href="/rango/logout/">Logout</a><br />
-            <p></p>
-             <a href="/rango/add_category/">Add a New Category</a>
-        {% else %}
-            <a href="/rango/register/">Register Here</a>
-            <p></p>
-            <a href="/rango/login/">Login</a>
-        {% endif %}
-    <p></p>
-    <a href="/rango/about/">About</a><br/>
-    </body>
-</html>
+    {% endblock %}
