--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
 {% load staticfiles %} <!-- New line -->
 
-<html>
 
-    <head>
-        <title>About</title>
-    </head>
+{% block title  %}About{% endblock %}
 
-    <body>
+    {% block body_title %}
         Rango says here is the about page <br/>
-	This tutorial has been put together by Naeem Rahman, 2095150b <br/> 
-        <a href="/rango">Index</a><br />
+	This tutorial has been put together by Naeem Rahman, 2095150b <br/>
         <img src="{% static "images/selfie.jpg" %}" alt="Picture of Myself" /> <!-- New line -->
-    </body>
+    {% endblock %}
 
-</html>
