Chapter 10 - Completed(New)

--- a/tango_with_django_project/templates/rango/restricted.html
+++ b/tango_with_django_project/templates/rango/restricted.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}Restricted Page{% endblock %}
+{% block title %}Restricted-Page{% endblock %}
 
     {% block body_block %}
         <p>Since you're logged in, you can see this text!</p>
