--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -5,7 +5,7 @@
 
 {% block title  %}About{% endblock %}
 
-    {% block body_title %}
+    {% block body_block %}
         Rango says here is the about page <br/>
 	This tutorial has been put together by Naeem Rahman, 2095150b <br/>
         <img src="{% static "images/selfie.jpg" %}" alt="Picture of Myself" /> <!-- New line -->
