--- a/tango_with_django_project/templates/rango/restricted.html
+++ b/tango_with_django_project/templates/rango/restricted.html
@@ -5,5 +5,11 @@
 {% block title %}Restricted-Page{% endblock %}
 
     {% block body_block %}
-        <p>Since you're logged in, you can see this text!</p>
+        <div class="page-header">
+                <h1>Restricted </h1>
+            </div>
+            <div>
+            <p>Since you're logged in, you can see this text!</strong>.</p>
+
+            </div>
     {% endblock %}
