--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -5,9 +5,13 @@
 {% block title  %}Rango{% endblock %}
 
     {% block body_block %}
-        <h1>Add a Category</h1>
+        <div class="page-header">
+                  <h1>Add a Category</h1>
+            </div>
+            <div>
+            <p></strong>.</p>
 
-        <form id="category_form" method="post" action="/rango/add_category/">
+                <form id="category_form" method="post" action="/rango/add_category/">
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -22,4 +26,5 @@
 
             <input type="submit" name="submit" value="Create Category" />
         </form>
-    {% endblock %}
+            </div>
+{% endblock %}
