--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -5,9 +5,12 @@
 {% block title %}Rango{% endblock %}
 
     {% block body_block %}
-        <h1>Add a Page</h1>
-
-        <form id="page_form" method="post" action="/rango/category/{{ category_name_slug }}/add_page/">
+        <div class="page-header">
+                <h1>Add a Page</h1>
+            </div>
+            <div>
+            <p>
+                 <form id="page_form" method="post" action="/rango/category/{{ category_name_slug }}/add_page/">
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -22,4 +25,8 @@
 
             <input type="submit" name="submit" value="Create Page" />
         </form>
+                </strong>.</p>
+            </div>
+
+
     {% endblock %}
