--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,30 +1,25 @@
 {% extends 'rango/base.html' %}
 
-{% load staticfiles %}
+{% block title %}Add Category{% endblock %}
 
-{% block title  %}Rango{% endblock %}
 
-    {% block body_block %}
-        <div class="page-header">
-                  <h1>Add a Category</h1>
-            </div>
-            <div>
-            <p></strong>.</p>
+{% block body_block %}
+                <form role="form"  id="category_form" method="post" action="/rango/add_category/">
+            <h2 class="form-signin-heading">Add a new Category</h2>
+                    {% csrf_token %}
+                    {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
 
-                <form id="category_form" method="post" action="/rango/add_category/">
+                    {% for field in form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}<br/>
+                        {{ field }}<br/>
+                    {% endfor %}
 
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
+                <br/>
+            <button class="btn btn-primary" type="submit" name="submit">Add Category</button>
+                </form>
 
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
 
-            <input type="submit" name="submit" value="Create Category" />
-        </form>
-            </div>
-{% endblock %}
+        {% endblock %}
