--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,32 +1,30 @@
 {% extends 'rango/base.html' %}
 
-{% load staticfiles %}
-
-{% block title %}Rango{% endblock %}
-
-    {% block body_block %}
-        <div class="page-header">
-                <h1>Add a Page</h1>
-            </div>
-            <div>
-            <p>
-                 <form id="page_form" method="post" action="/rango/category/{{ category_name_slug }}/add_page/">
-
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-
-            <input type="submit" name="submit" value="Create Page" />
-        </form>
-                </strong>.</p>
-            </div>
+{% block title %}Add Page{% endblock %}
 
 
-    {% endblock %}
+{% block body_block %}
+{% if category %}
+
+                <form role="form"  id="page_form" method="post" action="/rango/category/{{category.slug}}/add_page/">
+            <h2 class="form-signin-heading">Add a Page to <a href="/rango/category/{{category.slug}}/"> {{ category.name }}</a></h2>
+                    {% csrf_token %}
+                    {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
+
+                    {% for field in form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}<br/>
+                        {{ field }}<br/>
+                    {% endfor %}
+
+                <br/>
+            <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
+                </form>
+            {%  else %}
+            <p>This category does not exist.</p>
+        {%  endif %}
+
+
+        {% endblock %}
