--- a/tango_with_django_project/templates/rango/Search.html
+++ b/tango_with_django_project/templates/rango/Search.html
@@ -1,43 +1,21 @@
-{% extends 'rango/base.html' %}
+{% extends "rango/base.html" %}
 
 {% load staticfiles %}
 
-{% block title %}{{ category_name }}{% endblock %}
+{% block title %}Search{% endblock %}
 
 {% block body_block %}
+
     <div class="page-header">
-                <h1>{{ category_name }}</h1>
-            </div>
-            <div>
-            <p> {% if category %}
-        {% if pages %}
-        <ul>
-                {% for page in pages %}
-                	<li>
-			<a href="{% url 'goto' %}?page_id={{page.id}}">{{ page.title }}</a>
-			{% if page.views > 1 %}
-				({{ page.views }} Views)
-			{% elif page.views == 1 %}
-				({{ page.views }} View)
-			{% endif %}
-          	{% endfor %}
-                </ul>
-        {% else %}
-                <strong>No pages currently in category.</strong>
-                {% endif %}
+        <h1>Search with Rango</h1>
+    </div>
 
-        {% if user.is_authenticated %}
-                <a href="{% url 'add_page' category.slug %}">Add a Page</a>
-                {% endif %}
-        {% else %}
-                 The specified category {{ category_name }} does not exist!
-    {% endif %}
-                </strong>.</p>
+    <div class="row">
 
-            <img  width="90" height="100" src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
-            </div>
+        <div class="panel panel-primary">
+            <br/>
 
-	<form class="form-inline" id="user_form" method="post" action="{% url 'category' category.slug %}">
+            <form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
                 {% csrf_token %}
                 <!-- Display the search form elements here -->
                 <input class="form-control" type="text" size="50" name="query" value="" id="query" />
@@ -63,4 +41,6 @@
                 {% endif %}
                 </div>
             </div>
+ </div>
+
 {% endblock %}
